# Projeto_FaceID

./: Placa Controladora FaceID V5.0.rar  README.md  RaspPico  RaspPico.pub
Beckup/: .ninja_deps  (+12 more)
FID_Ethernet_1RFID/: CMakeLists.txt
FID_Ethernet_1RFID/#build#/: .ninja_log  1RF.elf  1RF.elf.map  1RF.hex  WiegandData.txt  build.ninja  cmake_install.cmake
FID_Ethernet_1RFID/#build#/.cmake/api/v1/reply/: codemodel-v2-74d42600bf3f2d364159.json  directory-pico-sdk-Debug-0cc106b644143af175db.json  directory-pico-sdk.docs-Debug-ad66b4deafaa84e38bb7.json  directory-pico-sdk.src.common-Debug-0ff0788562e592e587b9.json  directory-pico-sdk.src.common.boot_uf2-Debug-5a6b8bca03a79f22a9d4.json  directory-pico-sdk.src.common.pico_divider-Debug-ea69b622a2a7f4752f4b.json  directory-pico-sdk.src.common.pico_stdlib-Debug-c1c354c9eb4dc0a16910.json  directory-pico-sdk.src.common.pico_sync-Debug-e634c70b6d220d02bc82.json  directory-pico-sdk.src.common.pico_time-Debug-ac4704ad79de26d6e8c6.json  directory-pico-sdk.src.common.pico_util-Debug-ab45e5657a71a865ac38.json  directory-pico-sdk.src.rp2_common.cmsis-Debug-879e53a9279f44b68336.json  directory-pico-sdk.src.rp2_common.cyw43_driver-Debug-956024a73459a8316288.json  directory-pico-sdk.src.rp2_common.hardware_base-Debug-43a91b8c9bbe5b2b2175.json  directory-pico-sdk.src.rp2_common.hardware_pio-Debug-c4f5cb1f521e6ee3e4c3.json  directory-pico-sdk.src.rp2_common.hardware_pwm-Debug-67d57a26b9245e7e3579.json  (+11 more)
FID_Ethernet_1RFID/#build#/elf2uf2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  elf2uf2.ilk
FID_Ethernet_1RFID/#build#/elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
FID_Ethernet_1RFID/#build#/pico-sdk/src/: cmake_install.cmake
FID_Ethernet_1RFID/#build#/pico-sdk/src/common/: cmake_install.cmake
FID_Ethernet_1RFID/#build#/pico-sdk/src/rp2040/: cmake_install.cmake
FID_Ethernet_1RFID/#build#/pico-sdk/src/rp2_common/: cmake_install.cmake
FID_Ethernet_1RFID/#build#/pico-sdk/tools/: cmake_install.cmake
FID_Ethernet_1RFID/#build#/pioasm/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake
FID_Ethernet_1RFID/src/: CH9121.c  CH9121.h  main.c
(+686 files in other folders)
